Minor spacing fix
This commit fixes a minor spacing issue, where the form inputs
were wider than the viewport on xs devices. I have also added top
and bottom padding to the #main section, for better spacing between
when sections are extended.

--- a/css/input.css
+++ b/css/input.css
@@ -10,6 +10,8 @@
 }
 
 @theme {
+    --breakpoint-xs: 30rem;
+    
     --color-black: #000000;
     --color-white: #FFFFFF;
     --color-yellow: #F7C412;
